# DjangoToDo

./: .gitignore  pyproject.toml
src/djangotodo/djangotodo/: settings.py  urls.py
