[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.mypy]
strict = true
warn_unused_configs = true
check_untyped_defs = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true
exclude = ["DjangoToDo/DjangoToDo", "manage.py"]

[tool.ruff]
line-length = 120

[project]
name = "djangotodo"
version = "0.0.0"
authors = [
    { name = "Sequew", email = "kryseyt@gmail.com" },
]
description = "Todo list based on Django"
requires-python = ">=3.11"
dependencies = [
    "django",
]

[project.optional-dependencies]
lint = [
    "ruff"
]
types-checking = [
    "mypy",
    "django-stubs",
]
dev = [
    "djangotodo[lint, types-checking]"
]

[project.urls]
"Homepage" = "https://github.com/KrySeyt/DjangoToDo"